--- a/index.html
+++ b/index.html
@@ -5,18 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DevShop</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rufina:wght@400;700&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Krona+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Maven+Pro:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rufina:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
+    <section class="section__header">
+        <div class="header__container">
+            <div class="header__title">We've released new products! Check it out!</div>
+            <div class="header__btn"><a href="">Shop Now</a></div>
+        </div>
+    </section>
+    <section class="section__hero">
+        <div class="hero__container">
+            <div class="hero--nav--logo">
+                <div class="hero__logo"><img src="./image/logo-devshopbd-225x35.png" alt=""></div>
+                <nav class="menu__bar">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Shop</a></li>
+                        <li><a href="">Custom Ware!</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">My Account</a>
+                            <div class="sub__menu">
+                                <ul>
+                                    <li><a href="">Login</a></li>
+                                    <li><a href="">Register</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="nav__icon">$0.00 <i class='bx bxs-shopping-bag-alt'></i></div>
+                </nav>
+            </div>
+        </div>
+    </section>
+    <section class="section__landing">
+        <div class="landing__container">
+            <div class="landing__titl">We've Large Collection of Developer's</div>
+            <div class="landing__picture">
+                <div class="img__title">T-shirt</div>
+                <div class="landing__img"><img src="./image/1f468-200d-1f4bb.svg" alt=""></div>
+                <div class="landing__img"><img src="./image/1f469-200d-1f4bb.svg" alt=""></div>
+                <div class="landing__img"><img src="./image/1f4bb.svg" alt=""></div>
+            </div>
+            <div class="landing__btn"><a href="">Shop ASAP!</a></div>
+        </div>
+        
+    </section>
 </body>
 
 </html>
