frist page done

--- a/index.html
+++ b/index.html
@@ -61,6 +61,175 @@
         </div>
         
     </section>
+    <section class="section__product">
+        <div class="product__container">
+            <div class="product__content">
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section--check--out">
+        <div class="check--out--content">
+            <div class="check--out--header">Check Out More Products! </div>
+            <div class="check--out--btn"><i class='bx bxs-t-shirt' ></i> More Products!</div>
+            <div class="check--out--footer">What Developer Say?</div>
+            <div class="check--out--dash"></div>
+        </div>
+    </section>
+    <section class="section--facebook--box">
+        <div class="facebook--box--container">
+            <div class="facebook__box">
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+               </div>
+               <div class="facebook--box--footer">Check out more awesome review in our Facebook page! </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="section--dev--community">
+        <div class="dev--community--container">
+            <div class="dev--community--header">We're Engage with Developer Community!</div>
+            <div class="dev--community--title">We’re partner and worked with renowned companies, dev teams and developers. We’re the</div>
+            <div class="dev--community--title2">official merchandise suppliers to these companies.</div>
+            <div class="dev--community--gallery">
+                <div class="dev--community--image">
+                    <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
+                </div>
+                <div class="dev--community--image">
+                    <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
+                </div>
+                <div class="dev--community--image">
+                    <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
+                </div>
+            </div>
+            <div class="dev--community--dot">
+                <div class="dev__dot"></div>
+                <div class="dev__dot2"></div>
+            </div>
+        </div>
+    </section>
+    <section class="section__elementor">
+        <div class="elementor__container">
+            <div class="elementor__box">
+                <div class="elementor__icon"><i class='bx bx-code-alt' ></i></div>
+                <div class="elementor__text">
+                    <div class="elementor__head">DEVELOPER ORIENTED</div>
+                    <div class="elementor__title2">All our product is developer oriented!</div>
+                </div>
+            </div>
+            <div class="elementor__dash"></div>
+            <div class="elementor__box">
+                <div class="elementor__icon"><i class='bx bx-package'></i></div>
+                <div class="elementor__text">
+                    <div class="elementor__head">DELIVERED WITH CARE</div>
+                    <div class="elementor__title2">Deliver to all Bangladesh</div>
+                </div>
+            </div>
+            <div class="elementor__dash"></div>
+            <div class="elementor__box">
+                <div class="elementor__icon"><i class='bx bx-check'></i></div>
+                <div class="elementor__text">
+                    <div class="elementor__head">100% SATISFACTION</div>
+                    <div class="elementor__title2">Our Customer is 100% satisfied!</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section__elementor2">
+        <div class="elementor2__container">
+            <div class="elementor2__icon"><i class='bx bx-question-mark' ></i></div>
+            <div class="elementor2__text">Didn’t find the design what you look for?</div>
+            <div class="elementor2__form">Submit 📃<a href="">This Form</a>, when the design is available, we will let you know!</div>
+        </div>
+    </section>
 </body>
 
 </html>
