--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><a href="">My Account</a>
                             <div class="sub__menu">
                                 <ul>
-                                    <li><a href="">Login</a></li>
+                                    <li><a class="sub__log" href="">Login</a></li>
                                     <li><a href="">Register</a></li>
                                 </ul>
                             </div>
@@ -53,9 +53,9 @@
             <div class="landing__titl">We've Large Collection of Developer's</div>
             <div class="landing__picture">
                 <div class="img__title">T-shirt</div>
+                <div class="landing__img"><img src="./image/1f4bb.svg" alt=""></div>
                 <div class="landing__img"><img src="./image/1f468-200d-1f4bb.svg" alt=""></div>
                 <div class="landing__img"><img src="./image/1f469-200d-1f4bb.svg" alt=""></div>
-                <div class="landing__img"><img src="./image/1f4bb.svg" alt=""></div>
             </div>
             <div class="landing__btn"><a href="">Shop ASAP!</a></div>
         </div>
@@ -63,9 +63,33 @@
     </section>
     <section class="section__product">
         <div class="product__container">
+
+            <div class="fixed__btn">
+                <div class="btn--col--one">
+                    <div class="msnger__btn"><i class='bx bxs-message-rounded-dots'></i></div>
+                    <div class="contact__btn">Contact Us</div>
+                </div>
+                <div class="btn--col--two">
+                    <div class="msnger__btn"><i class='bx bxl-messenger'></i></div>
+                </div>
+            </div>
             <div class="product__content">
                 <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="product__img"><img src="./image/5-300x300.png" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
@@ -79,7 +103,21 @@
                     <div class="product__price">380.00৳  – 400.00৳ </div>
                 </div>
                 <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="product__img"><img src="./image/5-300x300.png" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
@@ -93,7 +131,14 @@
                     <div class="product__price">380.00৳  – 400.00৳ </div>
                 </div>
                 <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="product__img"><img src="./image/5-300x300.png" alt=""></div>
+                    <div class="sale__btn">Sale!</div>
+                    <div class="view__btn"><a href="">Quick View</a></div>
+                    <div class="product__name">React Shirt.Jsx T-shirt</div>
+                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                </div>
+                <div class="product">
+                    <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
@@ -107,42 +152,7 @@
                     <div class="product__price">380.00৳  – 400.00৳ </div>
                 </div>
                 <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
-                    <div class="sale__btn">Sale!</div>
-                    <div class="view__btn"><a href="">Quick View</a></div>
-                    <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
-                </div>
-                <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
-                    <div class="sale__btn">Sale!</div>
-                    <div class="view__btn"><a href="">Quick View</a></div>
-                    <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
-                </div>
-                <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
-                    <div class="sale__btn">Sale!</div>
-                    <div class="view__btn"><a href="">Quick View</a></div>
-                    <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
-                </div>
-                <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
-                    <div class="sale__btn">Sale!</div>
-                    <div class="view__btn"><a href="">Quick View</a></div>
-                    <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
-                </div>
-                <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
-                    <div class="sale__btn">Sale!</div>
-                    <div class="view__btn"><a href="">Quick View</a></div>
-                    <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
-                </div>
-                <div class="product">
-                    <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
+                    <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
@@ -184,10 +194,10 @@
                     <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
                 </div>
                 <div class="dev--community--image">
-                    <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
+                    <img src="./image/lrarn-with-sumit-pvj93wy7dj9056bdokjft1l30ckt4xr1k240ggafd0.png" alt="">
                 </div>
                 <div class="dev--community--image">
-                    <img src="./image/js-bangladesh-pvj94r11g8e6gp3osxji0tzu0ogjz92gc6zjtb1ttw.png" alt="">
+                    <img src="./image/tech-diary-pvj95j8759gs4zyq89qb3mvnu8lke66eg2k47lw0n8.png" alt="">
                 </div>
             </div>
             <div class="dev--community--dot">
@@ -228,6 +238,35 @@
             <div class="elementor2__icon"><i class='bx bx-question-mark' ></i></div>
             <div class="elementor2__text">Didn’t find the design what you look for?</div>
             <div class="elementor2__form">Submit 📃<a href="">This Form</a>, when the design is available, we will let you know!</div>
+        </div>
+    </section>
+    <section class="section--home--footer">
+        <div class="home--footer--container">
+           <div class="home--footer--content">
+            <div class="col__one">
+                <div class="col--one--head">DevShop BD</div>
+                <div class="col--one--text">DevShop BD is a Software</div>
+                <div class="col--one--text">Developer Oriented online e-</div>
+                <div class="col--one--text">commerce shop in Bangladesh.</div>
+            </div>
+            <div class="col__two">
+                <div class="col--two--text">T-Shirt Size</div>
+                <div class="col--two--text">Password Reset</div>
+                <div class="col--two--text">cart</div>
+                <div class="col--two--text">Terms & Condition</div>
+                <div class="col--two--text">New Design Order Form</div>
+                <div class="col--two--content">
+                    <div class="content--text"><a href="">We're looking for partner & investor</a></div>
+                    <div class="content--text"><a href="">investor</a></div>
+                </div>
+            </div>
+           </div>
+
+           <div class="social__icons">
+            <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
+            <div class="footer__icon"><i class='bx bxl-facebook-circle' ></i></div>
+            <div class="footer__icon"><i class='bx bxl-twitter' ></i></div>
+           </div>
         </div>
     </section>
 </body>
