--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 </head>
 
 <body>
-    <section class="section__header">
+    <!-- <section class="section__header">
         <div class="header__container">
             <div class="header__title">We've released new products! Check it out!</div>
             <div class="header__btn"><a href="">Shop Now</a></div>
         </div>
-    </section>
+    </section> -->
     <section class="section__hero">
         <div class="hero__container">
             <div class="hero--nav--logo">
                 <div class="hero__logo"><img src="./image/logo-devshopbd-225x35.png" alt=""></div>
                 <nav class="menu__bar">
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Shop</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./shop.html">Shop</a></li>
                         <li><a href="">Custom Ware!</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">My Account</a>
