--- a/shop.html
+++ b/shop.html
@@ -24,8 +24,8 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="">Custom Ware!</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="./custom.html">Custom Ware!</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                         <li><a href="">My Account</a>
                             <div class="sub__menu">
                                 <ul>
