--- a/shop.html
+++ b/shop.html
@@ -67,6 +67,48 @@
                         <div class="item"><a href="">T Shirt</a> <span>(21)</span></div>
                         <div class="item"><a href="">Women</a> <span>(2)</span></div>
                     </div>
+                    <div class="recent__product">
+                        <div class="recent--product--title">Recently Viewed Products</div>
+                        <div class="recent__box">
+                            <div class="recent__img"><img src="./image/python02-300x300.jpg" alt=""></div>
+                            <div class="recent--text--box">
+                                <div class="recent__title">Python</div>
+                                <div class="recent__title">Developer</div>
+                                <div class="recent__title">T-Shirt</div>
+                                <div class="recent__price">350.00৳ – 380.00৳ </div>
+                            </div>
+                        </div>
+                        <div class="recent__dash"></div>
+                        <div class="recent__box">
+                            <div class="recent__img"><img src="./image/python02-300x300.jpg" alt=""></div>
+                            <div class="recent--text--box">
+                                <div class="recent__title">Python</div>
+                                <div class="recent__title">Developer</div>
+                                <div class="recent__title">T-Shirt</div>
+                                <div class="recent__price">350.00৳ – 380.00৳ </div>
+                            </div>
+                        </div>
+                        <div class="recent__dash"></div>
+                        <div class="recent__box">
+                            <div class="recent__img"><img src="./image/python02-300x300.jpg" alt=""></div>
+                            <div class="recent--text--box">
+                                <div class="recent__title">Python</div>
+                                <div class="recent__title">Developer</div>
+                                <div class="recent__title">T-Shirt</div>
+                                <div class="recent__price">350.00৳ – 380.00৳ </div>
+                            </div>
+                        </div>
+                        <div class="recent__dash"></div>
+                        <div class="recent__box">
+                            <div class="recent__img"><img src="./image/python02-300x300.jpg" alt=""></div>
+                            <div class="recent--text--box">
+                                <div class="recent__title">Python</div>
+                                <div class="recent__title">Developer</div>
+                                <div class="recent__title">T-Shirt</div>
+                                <div class="recent__price">350.00৳ – 380.00৳ </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="vertical__dash"></div>
                 <div class="shop--col--two">
@@ -178,44 +220,47 @@
                             <div class="product__price">380.00৳ – 400.00৳ </div>
                         </div>
                     </div>
-<div class="next--btn--group">
-    <div class="next__btn">1</div>
-    <div class="next__btn">2</div>
-    <div class="next__btn"><i class='bx bxs-right-arrow-alt'></i></div>
-</div>
+                    <div class="next--btn--group">
+                        <div class="next__btn">1</div>
+                        <div class="next__btn">2</div>
+                        <div class="next__btn"><i class='bx bxs-right-arrow-alt'></i></div>
+                    </div>
                 </div>
 
             </div>
-
+            <div class="shop__contact">
+                <div class="shop__btn"><i class='bx bxs-message-rounded-dots'></i></div>
+                <div class="btn__contact">Contact Us</div>
+            </div>
         </div>
     </section>
     <section class="section--home--footer">
         <div class="home--footer--container">
-           <div class="home--footer--content">
-            <div class="col__one">
-                <div class="col--one--head">DevShop BD</div>
-                <div class="col--one--text">DevShop BD is a Software</div>
-                <div class="col--one--text">Developer Oriented online e-</div>
-                <div class="col--one--text">commerce shop in Bangladesh.</div>
-            </div>
-            <div class="col__two">
-                <div class="col--two--text">T-Shirt Size</div>
-                <div class="col--two--text">Password Reset</div>
-                <div class="col--two--text">cart</div>
-                <div class="col--two--text">Terms & Condition</div>
-                <div class="col--two--text">New Design Order Form</div>
-                <div class="col--two--content">
-                    <div class="content--text"><a href="">We're looking for partner & investor</a></div>
-                    <div class="content--text"><a href="">investor</a></div>
+            <div class="home--footer--content">
+                <div class="col__one">
+                    <div class="col--one--head">DevShop BD</div>
+                    <div class="col--one--text">DevShop BD is a Software</div>
+                    <div class="col--one--text">Developer Oriented online e-</div>
+                    <div class="col--one--text">commerce shop in Bangladesh.</div>
+                </div>
+                <div class="col__two">
+                    <div class="col--two--text">T-Shirt Size</div>
+                    <div class="col--two--text">Password Reset</div>
+                    <div class="col--two--text">cart</div>
+                    <div class="col--two--text">Terms & Condition</div>
+                    <div class="col--two--text">New Design Order Form</div>
+                    <div class="col--two--content">
+                        <div class="content--text"><a href="">We're looking for partner & investor</a></div>
+                        <div class="content--text"><a href="">investor</a></div>
+                    </div>
                 </div>
             </div>
-           </div>
 
-           <div class="social__icons">
-            <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
-            <div class="footer__icon"><i class='bx bxl-facebook-circle' ></i></div>
-            <div class="footer__icon"><i class='bx bxl-twitter' ></i></div>
-           </div>
+            <div class="social__icons">
+                <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
+                <div class="footer__icon"><i class='bx bxl-facebook-circle'></i></div>
+                <div class="footer__icon"><i class='bx bxl-twitter'></i></div>
+            </div>
         </div>
     </section>
 
