--- a/custom.html
+++ b/custom.html
@@ -44,67 +44,73 @@
         <div class="custom__container">
             <div class="custom__head">CUSTOM T-SHRT & HOODIE IN HERE!</div>
             <div class="custom__title">Show your own identity with custom wear!</div>
-<div class="custom__gallery">
-    <div class="gallery__box">
-        <div class="gallery"><img src="./image/custom-T-shirt-300x300.png" alt=""></div>
-        <div class="gallery__title">Custom T-shirt</div>
-    </div>
-  <div class="gallery__box">
-    <div class="gallery"><img src="./image/custom-hoodie-300x290.png" alt=""></div>
-    <div class="gallery__title">Custom Hoodie</div>
-  </div>
-   <div class="gallery__box">
-    <div class="gallery"><img src="./image/custom-Jersey-300x300.png" alt=""></div>
-    <div class="gallery__title">Custom Jersey</div>
-   </div>
-</div>
-<div class="custon--bottom--title">
-    <div class="custom--title--two">
-        We make custom T-shirts, hoodies, Jersey for you or your company. Let us know if you want to</div>
-        <div class="custom--title--two">make custom products.</div>
-</div>
-    <div class="custom__faq">FAQ</div>
-    <div class="custom__quantity">
-        <div class="quantity"> <i class='bx bxs-right-arrow'></i>0Minimum Quantity?</div>
-        <div class="quantity__dash"></div>
-        <div class="quantity"><i class='bx bxs-right-arrow'></i>Custom products Price?</div>
-        <div class="quantity__dash"></div>
-    </div>
-    <div class="details__content">
-        <div class="details__head">Lets Talk In Details</div>
-        <div class="details__title">You can ask us any question about your production from single pcs to thousand pcs. </div>
-        <div class="details__btn"><a href="">Call Now</a></div>
-    </div>
+            <div class="custom__gallery">
+                <div class="gallery__box">
+                    <div class="gallery"><img src="./image/custom-T-shirt-300x300.png" alt=""></div>
+                    <div class="gallery__title">Custom T-shirt</div>
+                </div>
+                <div class="gallery__box">
+                    <div class="gallery"><img src="./image/custom-hoodie-300x290.png" alt=""></div>
+                    <div class="gallery__title">Custom Hoodie</div>
+                </div>
+                <div class="gallery__box">
+                    <div class="gallery"><img src="./image/custom-Jersey-300x300.png" alt=""></div>
+                    <div class="gallery__title">Custom Jersey</div>
+                </div>
+            </div>
+            <div class="custon--bottom--title">
+                <div class="custom--title--two">
+                    We make custom T-shirts, hoodies, Jersey for you or your company. Let us know if you want to</div>
+                <div class="custom--title--two">make custom products.</div>
+            </div>
+            <div class="custom__faq">FAQ</div>
+            <div class="custom__quantity">
+                <div class="quantity"> <i class='bx bxs-right-arrow'></i>0Minimum Quantity?</div>
+                <div class="quantity__dash"></div>
+                <div class="quantity"><i class='bx bxs-right-arrow'></i>Custom products Price?</div>
+                <div class="quantity__dash"></div>
+            </div>
+            <div class="details__content">
+                <div class="details__head">Lets Talk In Details</div>
+                <div class="details__title">You can ask us any question about your production from single pcs to
+                    thousand pcs. </div>
+                <div class="details__btn"><a href="">Call Now</a></div>
+            </div>
+
+            <div class="shop__contact">
+                <div class="shop__btn"><i class='bx bxs-message-rounded-dots'></i></div>
+                                <div class="btn__contact">Contact Us</div>
+            </div>
 
         </div>
     </section>
     <section class="section--home--footer">
         <div class="home--footer--container">
-           <div class="home--footer--content">
-            <div class="col__one">
-                <div class="col--one--head">DevShop BD</div>
-                <div class="col--one--text">DevShop BD is a Software</div>
-                <div class="col--one--text">Developer Oriented online e-</div>
-                <div class="col--one--text">commerce shop in Bangladesh.</div>
-            </div>
-            <div class="col__two">
-                <div class="col--two--text">T-Shirt Size</div>
-                <div class="col--two--text">Password Reset</div>
-                <div class="col--two--text">cart</div>
-                <div class="col--two--text">Terms & Condition</div>
-                <div class="col--two--text">New Design Order Form</div>
-                <div class="col--two--content">
-                    <div class="content--text"><a href="">We're looking for partner & investor</a></div>
-                    <div class="content--text"><a href="">investor</a></div>
+            <div class="home--footer--content">
+                <div class="col__one">
+                    <div class="col--one--head">DevShop BD</div>
+                    <div class="col--one--text">DevShop BD is a Software</div>
+                    <div class="col--one--text">Developer Oriented online e-</div>
+                    <div class="col--one--text">commerce shop in Bangladesh.</div>
+                </div>
+                <div class="col__two">
+                    <div class="col--two--text">T-Shirt Size</div>
+                    <div class="col--two--text">Password Reset</div>
+                    <div class="col--two--text">cart</div>
+                    <div class="col--two--text">Terms & Condition</div>
+                    <div class="col--two--text">New Design Order Form</div>
+                    <div class="col--two--content">
+                        <div class="content--text"><a href="">We're looking for partner & investor</a></div>
+                        <div class="content--text"><a href="">investor</a></div>
+                    </div>
                 </div>
             </div>
-           </div>
 
-           <div class="social__icons">
-            <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
-            <div class="footer__icon"><i class='bx bxl-facebook-circle' ></i></div>
-            <div class="footer__icon"><i class='bx bxl-twitter' ></i></div>
-           </div>
+            <div class="social__icons">
+                <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
+                <div class="footer__icon"><i class='bx bxl-facebook-circle'></i></div>
+                <div class="footer__icon"><i class='bx bxl-twitter'></i></div>
+            </div>
         </div>
     </section>
 </body>
